@@ -7851,3 +7851,6 @@ EPRINTS-3.1.1
  * Fixed EPrints invalid user errors when starting indexer from apache
  * Fixed double-URLs in RSS2 media output
 
+2008-12-12 tdb
+ * Support plugin "tools" in saved searches, fixing #3462
+
